fixing google sign in handler, adding code activation request
