# dto/common.dto.go
@@ -1,5 +1,7 @@
 package dto
 
+// swagger:response defaultResponses
 type DefaultResponse struct {
+	// The response message
 	Message string `json:"message"`
 }
